@@ -31,5 +31,12 @@ const struct tag_table musicbrainz_txxx_tags[] = {
 	{ "MusicBrainz Release Track Id",
 	  TAG_MUSICBRAINZ_RELEASETRACKID },
 	{ "MusicBrainz Work Id", TAG_MUSICBRAINZ_WORKID },
+	{ "REPLAYGAIN_REFERENCE_LOUDNESS", TAG_REPLAYGAIN_REFERENCE_LOUDNESS},
+	{ "REPLAYGAIN_ALBUM_GAIN", TAG_REPLAYGAIN_ALBUM_GAIN},
+	{ "REPLAYGAIN_ALBUM_PEAK", TAG_REPLAYGAIN_ALBUM_PEAK},
+	{ "REPLAYGAIN_ALBUM_RANGE", TAG_REPLAYGAIN_ALBUM_RANGE},
+	{ "REPLAYGAIN_TRACK_GAIN", TAG_REPLAYGAIN_TRACK_GAIN},
+	{ "REPLAYGAIN_TRACK_PEAK", TAG_REPLAYGAIN_TRACK_PEAK},
+	{ "REPLAYGAIN_TRACK_RANGE", TAG_REPLAYGAIN_TRACK_RANGE},
 	{ nullptr, TAG_NUM_OF_ITEM_TYPES }
 };
