@@ -48,4 +48,11 @@ const char *const tag_item_names[TAG_NUM_OF_ITEM_TYPES] = {
 	[TAG_MUSICBRAINZ_TRACKID] = "MUSICBRAINZ_TRACKID",
 	[TAG_MUSICBRAINZ_RELEASETRACKID] = "MUSICBRAINZ_RELEASETRACKID",
 	[TAG_MUSICBRAINZ_WORKID] = "MUSICBRAINZ_WORKID",
+	[TAG_REPLAYGAIN_REFERENCE_LOUDNESS] = "REPLAYGAIN_REFERENCE_LOUDNESS",
+	[TAG_REPLAYGAIN_ALBUM_GAIN] = "REPLAYGAIN_ALBUM_GAIN",
+	[TAG_REPLAYGAIN_ALBUM_PEAK] = "REPLAYGAIN_ALBUM_PEAK",
+	[TAG_REPLAYGAIN_ALBUM_RANGE] = "REPLAYGAIN_ALBUM_RANGE",
+	[TAG_REPLAYGAIN_TRACK_GAIN] = "REPLAYGAIN_TRACK_GAIN",
+	[TAG_REPLAYGAIN_TRACK_PEAK] = "REPLAYGAIN_TRACK_PEAK",
+	[TAG_REPLAYGAIN_TRACK_RANGE] = "REPLAYGAIN_TRACK_RANGE",
 };
