@@ -63,6 +63,14 @@ enum TagType
 	TAG_MUSICBRAINZ_RELEASETRACKID,
 	TAG_MUSICBRAINZ_WORKID,
 
+	TAG_REPLAYGAIN_REFERENCE_LOUDNESS,
+	TAG_REPLAYGAIN_ALBUM_GAIN,
+	TAG_REPLAYGAIN_ALBUM_PEAK,
+	TAG_REPLAYGAIN_ALBUM_RANGE,
+	TAG_REPLAYGAIN_TRACK_GAIN,
+	TAG_REPLAYGAIN_TRACK_PEAK,
+	TAG_REPLAYGAIN_TRACK_RANGE,
+
 	TAG_NUM_OF_ITEM_TYPES
 };
 
